--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       </div>
     </header>
 
-    <main class="portfolio-hero">
+      <main class="portfolio-hero">
       <!--Navigation on page portfolio-->
       <section class="portfolio-navigation">
         <div class="container">
@@ -190,7 +190,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>*/
     </main>
 
 <!-- футер-->
