--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desctop.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -70,16 +73,16 @@
     <main class="hero">
       <!--Головна-->
 
-      <section class="hero-main overlay">
+      <!-- <section class="hero-main overlay">
         <div class="container">
           <h1 class="hero-text">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-buttom" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!--Типи технологій-->
-      <section class="tehnology">
+      <!-- <section class="tehnology">
         <div class="container">
           <h2 class="tehhology-maintext" hidden>Tipe of technologi</h2>
 
@@ -115,17 +118,17 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--What are we doing-->
       <!--All class begin "work"-->
       <!--Заголовки h2 це мейнтекст , -->
-      <section class="work">
+      <!--Якщо файл свг, то не ставимо ширину-->
+      <!-- <section class="work">
         <div class="container">
           <h2 class="work-maintext">What are we doing</h2>
           <ul class="work-list list">
             <li class="work-item">
-              <!--Якщо файл свг, то не ставимо ширину-->
               <a href="" class="work-link">
                 <img src="./images/computer.jpg" alt="computer" width="360" />
               </a>
@@ -146,11 +149,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Our team-->
       <!--All class begin "about"-->
-      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="about-maintext">Our Team</h2>
           <ul class="about-list list">
@@ -317,8 +320,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="customers">
+      </section> -->
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="about-maintext">Customers</h2>
           <ul class="customers-list list">
@@ -366,11 +369,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- футер-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footersec">
         <section class="footer-logosec">
           <a href="./index.html" class="logo-footer-first link">
@@ -443,9 +446,9 @@
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </button>
-        <!-- form -->
-        <form class="modal-form js-speaker-form">
+        </button> -->
+    <!-- form -->
+    <!-- <form class="modal-form js-speaker-form">
           <p class="form-text-main">
             Leave your contacts and we will call you back
           </p>
@@ -491,8 +494,7 @@
           </div>
           <div class="form-field">
             <label for="textarea" class="form-text-label">Comment</label>
-            <!-- У текстареа неможна залишати навіть пробіл ,
-             інакше не виводиться плейсхолдер -->
+
             <textarea
               name="comment"
               id="textarea"
@@ -500,9 +502,11 @@
               placeholder="Text input"
               class="form-textarea"
             ></textarea>
-          </div>
-          <!-- checkbox -->
-          <div class="form-privacy">
+          </div> -->
+    <!-- У текстареа неможна залишати навіть пробіл ,
+             інакше не виводиться плейсхолдер -->
+    <!-- checkbox -->
+    <!-- <div class="form-privacy">
             <input
               type="checkbox"
               name="privacy"
@@ -541,6 +545,6 @@
             );
           });
       })();
-    </script>
+    </script> -->
   </body>
 </html>
