--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <!--Our team-->
       <!--All class begin "about"-->
- <!--      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="about-maintext">Our Team</h2>
           <ul class="about-list list">
@@ -330,7 +330,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>-->
       <section class="customers">
         <div class="container">
           <h2 class="customers-maintext">Customers</h2>
@@ -380,10 +380,10 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> 
 
     <!-- футер-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footersec">
         <section class="footer-logosec">
           <a href="./index.html" class="logo-footer-first link">
@@ -448,15 +448,15 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> 
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </button> -->
+        </button> --> -->
     <!-- form -->
     <!-- <form class="modal-form js-speaker-form">
           <p class="form-text-main">
