--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <!--Our team-->
       <!--All class begin "about"-->
-      <!-- <section class="about">
+       <section class="about">
         <div class="container">
           <h2 class="about-maintext">Our Team</h2>
           <ul class="about-list list">
@@ -331,7 +331,7 @@
           </ul>
         </div>
       </section>-->
-      <section class="customers">
+     <section class="customers">
         <div class="container">
           <h2 class="customers-maintext">Customers</h2>
           <ul class="customers-list list">
@@ -378,12 +378,12 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> 
       </section>
-    </main> 
+    </main>  -->
 
     <!-- футер-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footersec">
         <section class="footer-logosec">
           <a href="./index.html" class="logo-footer-first link">
@@ -427,8 +427,8 @@
               </a>
             </li>
           </ul>
-        </section>
-        <div class="subscribe">
+        </section> -->
+        <!-- <div class="subscribe">
           <h3 class="footersoc-text">Subscribe</h3>
           <form class="subckribe-buttom">
             <input
@@ -446,7 +446,7 @@
               </svg>
             </span>
           </form>
-        </div>
+        </div> -->
       </div>
     </footer> 
 
