--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container main-nav">
         <nav class="navigation">
           <a href="./index.html" class="logo-first link">
@@ -64,7 +64,7 @@
             >+11 (000) 111-11-11</a
           >
         </li>
-      </ul> -->
+      </ul>
      <!--  <button type="button" class="menu-open-burger" data-menu-open>
         <svg class="burger-icon" width="32" height="22">
           <use href="./images/icons.svg#icon-burger"></use>
@@ -163,7 +163,7 @@
 
       <!--Our team-->
       <!--All class begin "about"-->
-       <section class="about">
+       <!-- <section class="about">
         <div class="container">
           <h2 class="about-maintext">Our Team</h2>
           <ul class="about-list list">
@@ -330,8 +330,8 @@
             </li>
           </ul>
         </div>
-      </section>-->
-     <section class="customers">
+      </section> -->
+     <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-maintext">Customers</h2>
           <ul class="customers-list list">
@@ -379,11 +379,11 @@
             </li>
           </ul>
         </div> 
-      </section>
-    </main>  -->
+      </section> -->
+    </main>   
 
     <!-- футер-->
-    <!-- <footer class="footer">
+   <!--  <footer class="footer">
       <div class="container footersec">
         <section class="footer-logosec">
           <a href="./index.html" class="logo-footer-first link">
@@ -427,10 +427,10 @@
               </a>
             </li>
           </ul>
-        </section> -->
-        <!-- <div class="subscribe">
+        </section>
+        <div class="subscribe">
           <h3 class="footersoc-text">Subscribe</h3>
-          <form class="subckribe-buttom">
+          <form class="subckribe-form">
             <input
               type="email"
               name="subscribe "
@@ -446,9 +446,9 @@
               </svg>
             </span>
           </form>
-        </div> -->
+        </div>
       </div>
-    </footer> 
+    </footer>  -->
 
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
