--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
   </head>
   <body>
   <!--хедер-->
-    <header class="header">
+   <!--  <header class="header">
       <div class="container main-nav">
-        <nav class="navigation">
+        <nav class="navigation"> -->
           <!--Navigation-->
-          <a href="./index.html" class="logo-first link">
+          <!-- <a href="./index.html" class="logo-first link">
             WEB <span class="logo-second">STUDIO</span>
           </a>
 
@@ -52,13 +52,13 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
       <main class="portfolio-hero">
       <!--Navigation on page portfolio-->
       <section class="portfolio-navigation">
         <div class="container">
-          <h1 hidden>Portfolio all </h1>
+          <!-- <h1 hidden>Portfolio all </h1>
           <ul class="portfolio-navigation-list list">
             <li class="portfolio-navigation-item">
               <button type="button" class="portfolio-buttom">All</button>
@@ -75,7 +75,7 @@
             <li class="portfolio-navigation-item">
               <button type="button" class="portfolio-buttom">Marketing</button>
             </li>
-          </ul>
+          </ul> -->
         
           <!--Link to app-->
           <ul class="app-list list">
