--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="header">
+   <!--  <header class="header">
       <div class="container main-nav">
         <nav class="navigation">
           <a href="./index.html" class="logo-first link">
@@ -64,7 +64,7 @@
             >+11 (000) 111-11-11</a
           >
         </li>
-      </ul>
+      </ul> -->
      <!--  <button type="button" class="menu-open-burger" data-menu-open>
         <svg class="burger-icon" width="32" height="22">
           <use href="./images/icons.svg#icon-burger"></use>
@@ -82,14 +82,14 @@
     <main class="hero">
       <!-- Головна-->
 
-      <!-- <section class="hero-main overlay">
+      <section class="hero-main overlay">
         <div class="container">
           <h1 class="hero-text">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-buttom" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>  -->
+      </section>  
 
       <!--Типи технологій-->
       <!-- <section class="tehnology">
