--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-   <!--  <header class="header">
+    <header class="header">
       <div class="container main-nav">
         <nav class="navigation">
           <a href="./index.html" class="logo-first link">
@@ -52,30 +52,31 @@
             </li>
           </ul>
         </nav>
-      </div>
-      <ul class="contacts list">
-        <li class="navigation-contacts">
-          <a href="mailto:info@devstudio.com" class="contact-adress link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="navigation-contacts">
-          <a href="tel:+11000111-11-11" class="contact-adress link"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul> -->
-     <!--  <button type="button" class="menu-open-burger" data-menu-open>
-        <svg class="burger-icon" width="32" height="22">
-          <use href="./images/icons.svg#icon-burger"></use>
-        </svg>
-      </button>
-      <div class="mob-menu">
-        <button class="menu-close" data-menu-close>
-          <svg class="menu-close-icon" width="32" height="22">
-            <use href="./images/icons.svg#icon-close"></use>
+
+        <ul class="contacts list">
+          <li class="navigation-contacts">
+            <a href="mailto:info@devstudio.com" class="contact-adress link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="navigation-contacts">
+            <a href="tel:+11000111-11-11" class="contact-adress link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+        <!--  <button type="button" class="menu-open-burger" data-menu-open>
+          <svg class="burger-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-burger"></use>
           </svg>
-        </button> -->
+        </button>
+        <div class="mob-menu">
+          <button class="menu-close" data-menu-close>
+            <svg class="menu-close-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+        </div> -->
       </div>
     </header>
     -->
@@ -89,10 +90,10 @@
             Order Service
           </button>
         </div>
-      </section>  
+      </section>
 
       <!--Типи технологій-->
-      <!-- <section class="tehnology">
+      <section class="tehnology">
         <div class="container">
           <h2 class="tehhology-maintext" hidden>Tipe of technologi</h2>
 
@@ -128,13 +129,13 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--What are we doing-->
       <!--All class begin "work"-->
       <!--Заголовки h2 це мейнтекст , -->
       <!--Якщо файл свг, то не ставимо ширину-->
-      <!-- <section class="work">
+      <section class="work">
         <div class="container">
           <h2 class="work-maintext">What are we doing</h2>
           <ul class="work-list list">
@@ -159,11 +160,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Our team-->
       <!--All class begin "about"-->
-       <!-- <section class="about">
+      <section class="about">
         <div class="container">
           <h2 class="about-maintext">Our Team</h2>
           <ul class="about-list list">
@@ -330,8 +331,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-     <!-- <section class="customers">
+      </section>
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-maintext">Customers</h2>
           <ul class="customers-list list">
@@ -380,10 +381,10 @@
           </ul>
         </div> 
       </section> -->
-    </main>   
+    </main>
 
     <!-- футер-->
-   <!--  <footer class="footer">
+    <!--  <footer class="footer">
       <div class="container footersec">
         <section class="footer-logosec">
           <a href="./index.html" class="logo-footer-first link">
@@ -456,7 +457,8 @@
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </button> --> -->
+        </button> -->
+    -->
     <!-- form -->
     <!-- <form class="modal-form js-speaker-form">
           <p class="form-text-main">
