--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="container">
           <h2 class="customers-maintext">Customers</h2>
           <ul class="customers-list list">
@@ -379,12 +379,12 @@
               </a>
             </li>
           </ul>
-        </div> 
-      </section> -->
+        </div>
+      </section>
     </main>
 
     <!-- футер-->
-    <!--  <footer class="footer">
+    <footer class="footer">
       <div class="container footersec">
         <section class="footer-logosec">
           <a href="./index.html" class="logo-footer-first link">
@@ -449,18 +449,18 @@
           </form>
         </div>
       </div>
-    </footer>  -->
+    </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </button> -->
-    -->
-    <!-- form -->
-    <!-- <form class="modal-form js-speaker-form">
+        </button>
+
+        <!-- form -->
+        <form class="modal-form js-speaker-form">
           <p class="form-text-main">
             Leave your contacts and we will call you back
           </p>
@@ -514,11 +514,12 @@
               placeholder="Text input"
               class="form-textarea"
             ></textarea>
-          </div> -->
-    <!-- У текстареа неможна залишати навіть пробіл ,
+          </div>
+          -->
+          <!-- У текстареа неможна залишати навіть пробіл ,
              інакше не виводиться плейсхолдер -->
-    <!-- checkbox -->
-    <!-- <div class="form-privacy">
+          <!-- checkbox -->
+          <div class="form-privacy">
             <input
               type="checkbox"
               name="privacy"
@@ -558,6 +559,7 @@
             );
           });
       })();
-    </script> -->
+    </script>
+    -->
   </body>
 </html>
