--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             >
           </li>
         </ul>
-        <!--  <button type="button" class="menu-open-burger" data-menu-open>
+        <button type="button" class="menu-open-burger" data-menu-open>
           <svg class="burger-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
@@ -76,7 +76,7 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-        </div> -->
+        </div>
       </div>
     </header>
     -->
