--- a/index.html
+++ b/index.html
@@ -65,21 +65,83 @@
             >
           </li>
         </ul>
+        <div class="burger">
+           <ul class="navigation-list list">
+            <li class="navigation-item">
+              <a href="./index.html" class="navigation-link link current"
+                >Studio</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a href="./portfolio.html" class="navigation-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a href="" class="navigation-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+         <ul class="contacts list">
+          <li class="navigation-contacts">
+            <a href="mailto:info@devstudio.com" class="contact-adress link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="navigation-contacts">
+            <a href="tel:+11000111-11-11" class="contact-adress link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+        <ul class="teamsoc-list list">
+          <li class="teamsoc-item">
+                    <a href="" class="teamsoc-link link">
+                      <svg class="teamsoc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teamsoc-item">
+                    <a href="" class="teamsoc-link link">
+                      <svg class="teamsoc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teamsoc-item">
+                    <a href="" class="teamsoc-link link">
+                      <svg class="teamsoc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teamsoc-item">
+                    <a href="" class="teamsoc-link link">
+                      <svg class="teamsoc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+         
+        </div>
         <button type="button" class="menu-open-burger" data-menu-open>
           <svg class="burger-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
-        <div class="mob-menu">
+
+        <!-- <div class="mob-menu">
           <button class="menu-close" data-menu-close>
             <svg class="menu-close-icon" width="32" height="22">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-        </div>
+        </div> -->
       </div>
     </header>
-    -->
+
     <main class="hero">
       <!-- Головна-->
 
@@ -440,11 +502,12 @@
               class="subscribe-input"
             />
             <span class="subscribe-icon-sp">
-              <button type="submit" class="subscribe-buttom">Subscribe</button>
-
-              <svg class="subscribe-icon" width="24" height="20">
-                <use href="./images/icons.svg#icon-telegram"></use>
-              </svg>
+              <button type="submit" class="subscribe-buttom">
+                Subscribe
+                <svg class="subscribe-icon" width="24" height="20">
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </button>
             </span>
           </form>
         </div>
