--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
           <ul class="about-list list">
             <li class="about-item">
               <img
+              srcset=""
                 src="./images/prodactmeneger.jpg"
                 alt="Product Designer"
                 width="264"
