Update image for retina 2x

--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@
           <ul class="about-list list">
             <li class="about-item">
               <img
-              srcset=""
+                srcset="./images/prodactmenedger-2x.jpg 2x"
                 src="./images/prodactmeneger.jpg"
                 alt="Product Designer"
+                
                 width="264"
               />
               <div class="card">
@@ -274,6 +275,7 @@
             </li>
             <li class="about-item">
               <img
+                srcset="./images/developer-2x.jpg 2x"
                 src="./images/developer.jpg"
                 alt="Frontend Developer"
                 width="264"
@@ -314,7 +316,9 @@
               </div>
             </li>
             <li class="about-item">
-              <img src="./images/marketing.jpg" alt="Marketing" width="264" />
+              <img 
+              srcset="./images/marketing-2x.jpg 2x"
+              src="./images/marketing.jpg" alt="Marketing" width="264" />
 
               <div class="card">
                 <h3 class="about-text">Camila Garsia</h3>
@@ -353,6 +357,7 @@
             </li>
             <li class="about-item">
               <img
+              srcset="./images/uidesinger-2x.jpg 2x"
                 src="./images/uidesinger.jpg"
                 alt="UI Designer"
                 width="264"
