menu mobile burger

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container main-nav">
         <nav class="navigation">
           <a href="./index.html" class="logo-first link">
@@ -64,7 +64,7 @@
               >+11 (000) 111-11-11</a
             >
           </li>
-        </ul> -->
+        </ul>
 
         <div class="burger">
           <button type="button" class="menu-open" data-menu-open>
@@ -74,7 +74,7 @@
           </button>
         </div>
 
-        <div class="mob-menu">
+        <div class="mob-menu is-hidden" data-menu>
           <div class="container-mob">
           <div class="mob-menu-top">
             <button class="menu-close" data-menu-close>
